se agregan encriptado y desencriptado